Task 3/httpd-service.yml
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
  labels:
    app: httpd-app
  annotations:
    description: "ClusterIP service for httpd server"
spec:
  selector:
    app: httpd-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
